--- a/plugins/ros/src/components/riScInfo/RiScSelectionCard.module.css
+++ b/plugins/ros/src/components/riScInfo/RiScSelectionCard.module.css
@@ -1,7 +1,3 @@
-[data-theme-mode='dark'] .card {
-  background-color: #424242;
-}
-
 .selectTrigger button {
   background-color: transparent;
 }
