--- a/plugins/ros/src/components/riskMatrix/RiskMatrix.module.css
+++ b/plugins/ros/src/components/riskMatrix/RiskMatrix.module.css
@@ -1,7 +1,3 @@
-[data-theme-mode='dark'] .card {
-  background-color: #424242;
-}
-
 .gridWrapper {
   display: flex;
   justify-content: center;
